# SPSS-Mac-MCP

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
docs/: macos-port.md
examples/full_validation/: .gitignore  01_generate_datasets.py  02_run_all_analyses.py  03_extract_results.py
examples/full_validation/datasets/: categorical.sav  cluster_survival.sav  experiment.sav  firm_panel.sav  nonparametric.sav  survey_likert.sav
examples/full_validation/html/: A1_descriptives.html  A2_frequencies.html  A3_crosstabs_chi2.html  B1_pearson.html  B2_spearman.html  C1_indep_ttest.html  C2_paired_ttest.html  C3_oneway_anova.html  C4_factorial_anova.html  C5_repeated_measures.html  D1_linear_reg.html  D2_hierarchical_reg.html  D3_binary_logistic.html  D4_multinomial.html  E1_reliability.html  E2_factor_analysis.html  F1_mann_whitney.html  F2_kruskal_wallis.html  F3_wilcoxon.html  G1_kmeans.html  G2_hierarchical_cluster.html  G3_discriminant.html  H1_kaplan_meier.html
examples/full_validation/output/: A1_descriptives.xml  A2_frequencies.xml  A3_crosstabs_chi2.xml  B1_pearson.xml  B2_spearman.xml  C1_indep_ttest.xml  C2_paired_ttest.xml  C3_oneway_anova.xml  C4_factorial_anova.xml  C5_repeated_measures.xml  D1_linear_reg.xml  D2_hierarchical_reg.xml  D3_binary_logistic.xml  D4_multinomial.xml  E1_reliability.xml  F3_wilcoxon.xml  (+8 more)
examples/process_models/: README.md  test_6_models.py
skills/spss-analyst/: SKILL.md
skills/spss-mcp-guard/: SKILL.md
src/spss_mac_mcp/: __init__.py  claude_config.py  cli.py  config.py  method_registry.py  method_templates.py  method_validation.py  output_parser.py  sav_reader.py  server.py  spss_engine.py  spss_runner.py
tests/: test_case_selection_context.py  test_claude_config.py  test_method_registry.py  test_method_templates.py  test_method_validation.py  test_reproduction_manifest.py  test_runner_result_classification.py  test_runtime_config.py  test_server_cold_methods.py
tests/fixtures/: reproduction_manifest.json
(+57 files in other folders)
